--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script>
         $(document).ready(function() {
             // 창을 새로고침 할 때마다
+            // 주석추가
             $.ajax({
                 type: "GET",
                 url: "https://api.manana.kr/exchange/rate.json",
